[package]
name = "jp"
version = "0.1.0"
authors = ["Brandon Raabe <brandocorp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = "0.4"
serde_json = "1.0"
simple_logger = "1.3.0"
jsonpath_lib = "0.2.3"